using SnapshotManager everywhere