@@ -18,8 +18,8 @@
 
 package org.apache.cassandra.tools;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
@@ -34,7 +34,7 @@ import org.apache.cassandra.distributed.shared.WithProperties;
 import org.apache.cassandra.exceptions.ConfigurationException;
 import org.apache.cassandra.exceptions.StartupException;
 import org.apache.cassandra.io.sstable.LegacySSTableTest;
-import org.apache.cassandra.service.StorageService;
+import org.apache.cassandra.service.snapshot.SnapshotManager;
 import org.apache.cassandra.tools.ToolRunner.ToolResult;
 import org.assertj.core.api.Assertions;
 
@@ -93,9 +93,7 @@ public class StandaloneUpgraderOnSStablesTest
     {
         LegacySSTableTest.truncateLegacyTables(legacyId);
         LegacySSTableTest.loadLegacyTables(legacyId);
-        StorageService.instance.takeSnapshot("testsnapshot",
-                                             Collections.emptyMap(),
-                                             "legacy_tables.legacy_" + legacyId + "_simple");
+        SnapshotManager.instance.takeSnapshot("testsnapshot", Map.of(), "legacy_tables.legacy_" + legacyId + "_simple");
 
         ToolResult tool = ToolRunner.invokeClass(StandaloneUpgrader.class,
                                                  "-k",
